--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,7 +1,7 @@
 CC = clang++
 
 RM = rm
-OBJS = Serializer.o Graph.o GraphAlgorithm.o BlockCache.o SegmentTree.o
+OBJS = Serializer.o Graph.o BlockCache.o SegmentTree.o
 CFLAGS = -Wall -g -O3 -march=native -pthread -std=c++17
 
 ifeq ($(OS),Windows_NT)
@@ -14,7 +14,7 @@ endif
 
 .PHONY: clean
 
-all: bin/parser$(EXE_SUFFIX) bin/wcc$(EXE_SUFFIX) bin/bfs$(EXE_SUFFIX) bin/tc$(EXE_SUFFIX) bin/pagerank$(EXE_SUFFIX)
+all: bin/parser$(EXE_SUFFIX) bin/wcc$(EXE_SUFFIX) bin/bfs$(EXE_SUFFIX) bin/dfs$(EXE_SUFFIX) bin/tc$(EXE_SUFFIX) bin/pagerank$(EXE_SUFFIX)
 
 bin/parser$(EXE_SUFFIX): parser.o $(OBJS)
 	$(CC) $(CFLAGS) $(LFLAGS) $(OBJS) $< -o $@
@@ -23,6 +23,9 @@ bin/wcc$(EXE_SUFFIX): wcc.o $(OBJS)
 	$(CC) $(CFLAGS) $(LFLAGS) $(OBJS) $< -o $@
 
 bin/bfs$(EXE_SUFFIX): bfs.o $(OBJS)
+	$(CC) $(CFLAGS) $(LFLAGS) $(OBJS) $< -o $@
+
+bin/dfs$(EXE_SUFFIX): dfs.o $(OBJS)
 	$(CC) $(CFLAGS) $(LFLAGS) $(OBJS) $< -o $@
 
 bin/tc$(EXE_SUFFIX): tc.o $(OBJS)
@@ -35,6 +38,9 @@ wcc.o: algorithm/wcc.cpp
 	$(CC) $(CFLAGS) -c $<
 
 bfs.o: algorithm/bfs.cpp
+	$(CC) $(CFLAGS) -c $<
+
+dfs.o: algorithm/dfs.cpp
 	$(CC) $(CFLAGS) -c $<
 
 tc.o: algorithm/tc.cpp
